Changed draft_01_main.html and its styles file

--- a/draft_06_activity.html
+++ b/draft_06_activity.html
@@ -42,7 +42,7 @@
     <div class="wide">
         <div class="usual activity-events-list wide">
             <div class="usual activity-period padding-bottom-30">
-                <div class="usual">
+                <div class="activity-period-first usual">
                     <span>За сегодня, 01 июня 2012</span>
                 </div>
                 <div class="search-input activity-search">
