--- a/draft_01_main.html
+++ b/draft_01_main.html
@@ -15,13 +15,13 @@
             <div class="logo">
                 <a href="/"><img src="images/logo.png"></a>
             </div>
-            <div class="nav">
+            <!--<div class="nav">
                 <div><a class=""
                         href="/">Catalog</a></div>
                 <div class="border"></div>
                 <div class="menu-active"><a href="/">Profile</a></div>
 
-            </div>
+            </div>-->
             <div class="login">
                 <a href="/">Sign Up</a>
                 |
@@ -31,17 +31,27 @@
         </div>
     </div>
     <div class="content">
+        <div class="content-pre-header">
+            <div class="usual site-slogan">
+                <div class="usual site-slogan-text"><span>Share your events with anyone you want</span></div>
+                <div class="usual shadow-border main-eventplus-button"><img src="images/event-logo.png"></div></div>
+            <div class="usual site-slogan-signature"><span>...or explore public events</span></div>
+        </div>
         <div class="content-header">
+            <div ><a href="/">Catalog</a></div>
             <div class="content-header-active"><a href="/">All</a></div>
-            <div><a href="/">Business</a></div>
             <div><a href="/">Entertainment</a></div>
             <div class="last"><a href="/">Special Offers</a></div>
-            <div class="content-header-event last"><img src="images/event-logo.png"></div>
+            <div class="content-header-event last">
+                <div class="right last" onclick="">
+                    <span>Kiev, Ukraine</span>
+                    <img src="images/cross.png">
+                </div>
+            </div>
         </div>
         <div class="content-page full-wide">
-            <div class="main-content-popular-tags right">
-                <a href="">Kiev, Ukraine (change)</a>
-            </div>
+
+
             <div class="main-content-block shadow-border">
                 <div class="main-content-block-header">
                     <hr>
@@ -95,6 +105,8 @@
                 <span><b>Popular tags:</b> music, sport, reality, finance, show, foto, reality, </span>
                 <a href="">more tags...</a>
             </div>
+            <div class="draft-events-show-more full-wide shadow-border"><span>More Events</span></div>
+            <div style="height:1px;overflow:hidden;clear:both;"></div>
         </div>
     </div>
     <div class="footer">
