from-quests.html javascript added

--- a/from-quests.html
+++ b/from-quests.html
@@ -11,152 +11,199 @@
 <body>
 
 <div class="content">
-    <div class="quest-form-header usual">
-        <div class="quest-form-header-item usual">
-            <span>Street Art Utopia</span>
-        </div>
-        <div class="quest-form-header-item usual">
-            <a href="">Список посетителей</a>
-        </div>
-        <div class="quest-form-header-item usual last  quest-active">
-            <a href="">пригласить</a>
-        </div>
-        <img src="images/big-cross.png">
-
-        <div style="height:1px;overflow:hidden;clear:both;"></div>
+<div class="quest-form-header usual">
+    <div class="quest-form-header-item usual">
+        <span>Street Art Utopia</span>
     </div>
-    <div class="content-page usual quest-page">
-
-        <div class="quest-form-filter usual">
-            <span>Выслать приглашение</span>
-
-            <div class="send-input"><input class="form-input full-wide"></div>
-            <span class="quest-form-or">или</span><br>
-            <span>Выбрать из списка контактов</span>
-
-            <div>
-                <div class="quest-form-contact-list shadow-border">
-                    <div class="quest-form-list-item usual q-second">
-                        <img class="usual"
-                             src="userimages/avatar-0001.png">
-
-                        <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                        <img class="quest-form-list-item-cross"
-                             src="images/cross.png">
-                    </div>
-                    <div class="quest-form-list-item usual">
-                        <img class="usual"
-                             src="userimages/avatar-0001.png">
-
-                        <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                        <img class="quest-form-list-item-cross"
-                             src="images/cross.png">
-                    </div>
-                    <div class="quest-form-list-item usual q-second">
-                        <img class="usual"
-                             src="userimages/avatar-0001.png">
-
-                        <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                        <img class="quest-form-list-item-cross"
-                             src="images/cross.png">
-                    </div>
-                    <div class="quest-form-list-item usual">
-                        <img class="usual"
-                             src="userimages/avatar-0001.png">
-
-                        <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                        <img class="quest-form-list-item-cross"
-                             src="images/cross.png">
-                    </div>
-                    <div class="quest-form-list-item usual q-second">
-                        <img class="usual"
-                             src="userimages/avatar-0001.png">
-
-                        <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                        <img class="quest-form-list-item-cross"
-                             src="images/cross.png">
-                    </div>
-                    <div class="quest-form-list-item usual">
-                        <img class="usual"
-                             src="userimages/avatar-0001.png">
-
-                        <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                        <img class="quest-form-list-item-cross"
-                             src="images/cross.png">
-                    </div>
-                    <div class="quest-form-list-item usual q-second">
-                        <img class="usual"
-                             src="userimages/avatar-0001.png">
-
-                        <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                        <img class="quest-form-list-item-cross"
-                             src="images/cross.png">
-                    </div>
-                    <div class="quest-form-list-item usual">
-                        <img class="usual"
-                             src="userimages/avatar-0001.png">
-
-                        <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                        <img class="quest-form-list-item-cross"
-                             src="images/cross.png">
-                    </div>
-                    <div class="quest-form-list-item usual">
-                        <img class="usual"
-                             src="userimages/avatar-0001.png">
-
-                        <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                        <img class="quest-form-list-item-cross"
-                             src="images/cross.png">
-                    </div>
-                    <div class="quest-form-list-item usual">
-                        <img class="usual"
-                             src="userimages/avatar-0001.png">
-
-                        <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                        <img class="quest-form-list-item-cross"
-                             src="images/cross.png">
-                    </div>
-                    <div class="quest-form-list-item usual">
-                        <img class="usual"
-                             src="userimages/avatar-0001.png">
-
-                        <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                        <img class="quest-form-list-item-cross"
-                             src="images/cross.png">
-                    </div>
-                    <div class="quest-form-list-item usual">
-                        <img class="usual"
-                             src="userimages/avatar-0001.png">
-
-                        <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                        <img class="quest-form-list-item-cross"
-                             src="images/cross.png">
-                    </div>
-                </div>
-            </div>
-            <div class="draft-events-show-more shadow-border full-wide"><span>Пригласить</span></div>
-        </div>
-        <div class="quest-form-invite-text usual">
-            <div class="quest-form-invite-text-header usual">
-                <span>Текст приглашения</span>
-
-                <div class="quest-form-change">
-                    <span>Изменить</span>
-                </div>
-            </div>
-            <div class=""><textarea class="form-input"
-                                    disabled></textarea></div>
-            <div class="draft-events-show-more shadow-border full-wide"><span>Сохранить</span></div>
-
-        </div>
-
-        <form id="quest-form">
-        </form>
-        <div style="height:1px;overflow:hidden;clear:both;"></div>
+    <div class="quest-form-header-item usual">
+        <a href="">Список посетителей</a>
     </div>
+    <div class="quest-form-header-item usual last  quest-active">
+        <a href="">пригласить</a>
+    </div>
+    <img src="images/big-cross.png">
 
     <div style="height:1px;overflow:hidden;clear:both;"></div>
 </div>
+<div class="content-page usual quest-page">
+
+<div class="quest-form-filter usual">
+    <span class="quest-form-filter-top">Добавить гостей</span>
+
+    <div class="send-input"><input placeholder="введите имя или почту" class="form-input">
+        <div class="usual form-input-add-button"></div>
+    </div>
+
+
+    <div>
+        <div class="usual quest-form-contact-list shadow-border">
+            <div class="quest-form-list-item usual q-second">
+                <img class="usual"
+                     src="userimages/avatar-0001.png">
+
+                <div class="usual quest-form-list-item-username"><span>Username</span></div>
+                <div onclick="invite('user1')" id="user1-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
+            </div>
+            <div class="quest-form-list-item usual">
+                <img class="usual"
+                     src="userimages/avatar-0001.png">
+
+                <div class="usual quest-form-list-item-username"><span>Username</span></div>
+                <div onclick="invite('user2')" id="user2-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
+            </div>
+            <div class="quest-form-list-item usual q-second">
+                <img class="usual"
+                     src="userimages/avatar-0001.png">
+
+                <div class="usual quest-form-list-item-username"><span>Username</span></div>
+                <div onclick="invite('user3')" id="user3-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
+            </div>
+            <div class="quest-form-list-item usual">
+                <img class="usual"
+                     src="userimages/avatar-0001.png">
+
+                <div class="usual quest-form-list-item-username"><span>Username</span></div>
+                <div onclick="invite('user4')" id="user4-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
+            </div>
+            <div class="quest-form-list-item usual q-second">
+                <img class="usual"
+                     src="userimages/avatar-0001.png">
+
+                <div class="usual quest-form-list-item-username"><span>Username</span></div>
+                <div onclick="invite('user5')" id="user5-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
+            </div>
+            <div class="quest-form-list-item usual">
+                <img class="usual"
+                     src="userimages/avatar-0001.png">
+
+                <div class="usual quest-form-list-item-username"><span>Username</span></div>
+                <div onclick="invite('user6')" id="user6-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
+            </div>
+            <div class="quest-form-list-item usual q-second">
+                <img class="usual"
+                     src="userimages/avatar-0001.png">
+
+                <div class="usual quest-form-list-item-username"><span>Username</span></div>
+                <div onclick="invite('user7')" id="user7-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
+            </div>
+            <div class="quest-form-list-item usual">
+                <img class="usual"
+                     src="userimages/avatar-0001.png">
+
+                <div class="usual quest-form-list-item-username"><span>Username</span></div>
+                <div onclick="invite('user8')" id="user8-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
+            </div>
+            <div class="quest-form-list-item usual">
+                <img class="usual"
+                     src="userimages/avatar-0001.png">
+
+                <div class="usual quest-form-list-item-username"><span>Username</span></div>
+                <div onclick="invite('user9')" id="user9-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
+            </div>
+            <div class="quest-form-list-item usual">
+                <img class="usual"
+                     src="userimages/avatar-0001.png">
+
+                <div class="usual quest-form-list-item-username"><span>Username</span></div>
+                <div onclick="invite('user10')" id="user10-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
+            </div>
+            <div class="quest-form-list-item usual">
+                <img class="usual"
+                     src="userimages/avatar-0001.png">
+
+                <div class="usual quest-form-list-item-username"><span>Username</span></div>
+                <div onclick="invite('user11')" id="user11-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
+            </div>
+            <div class="quest-form-list-item usual">
+                <img class="usual"
+                     src="userimages/avatar-0001.png">
+
+                <div class="usual quest-form-list-item-username"><span>Username</span></div>
+                <div onclick="invite('user12')" id="user12-status"  class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
+            </div>
+        </div>
+    </div>
+    <div class="quest-form-invite-text usual">
+        <div class="quest-form-invite-text-header usual">
+            <span class="bottom0">Текст приглашения</span>
+
+            <div id="text-change-button" onclick="editInviteText()" class="quest-form-change">
+                <span>Изменить</span>
+            </div>
+        </div>
+        <div class="">
+            <textarea id="invite-text" class="form-input" disabled>
+
+
+    Привет!
+
+    Это текст приглашения на встречу.
+
+    Пока.
+            </textarea>
+        </div>
+
+    </div>
+</div>
+<div class="quest-form-invited usual">
+    <span class="quest-form-filter-top">Будут приглашены</span>
+
+    <div>
+        <div id="invited-users" class="usual quest-form-invite-list shadow-border">
+        </div>
+        <div class="user-events-show-more full-wide shadow-border"><span>ПРИГЛАСИТЬ</span></div></div>
+    </div>
+</div>
+
+<form id="quest-form">
+</form>
+<div style="height:1px;overflow:hidden;clear:both;"></div>
+</div>
+
+<div style="height:1px;overflow:hidden;clear:both;"></div>
+</div>
 
 </body>
+<script type="text/javascript">
+
+    function invite(userid){
+
+        var oclick = 'onclick="'+"deInvite('"+ userid +"')"+'"'
+        var box = document.getElementById("invited-users")
+        var userBlock = '<div  class="quest-form-list-item usual" '+ 'id="' + userid + '">' +
+                ' <img class="usual" src="userimages/avatar-0001.png"><div class="usual quest-form-list-item-username"><span>'+userid+'</span>' +
+                '</div><img ' + oclick + ' class="' + 'quest-form-list-item-cross"'+' src="'+'images/cross.png">'+'</div>'
+
+        var newUser = document.createElement('DIV')
+        newUser.innerHTML = userBlock
+        box.innerHTML = box.innerHTML + newUser.innerHTML
+        var  elemId = userid + '-status'
+        var toDelete = document.getElementById(elemId)
+        toDelete.innerHTML = '<span  class="form-user-already-button">приглашен</span>'
+        toDelete.setAttribute('onclick','')
+    } ;
+
+    function deInvite(userid){
+        var invited = document.getElementById(userid)
+        var box = document.getElementById("invited-users")
+        box.removeChild(invited)
+        var  elemId = userid + '-status'
+        var toDelete = document.getElementById(elemId)
+        toDelete.innerHTML = '<span  class="form-user-invite-button">ПРИГЛАСИТЬ</span>'
+        toDelete.setAttribute('onclick',"invite('"+userid+"')")
+    }  ;
+
+    function editInviteText(){
+        var textField = document.getElementById('invite-text')
+        if (textField.disabled) {
+            textField.disabled = false
+            textField.aut
+            document.getElementById('text-change-button').innerHTML = '<span>Сохранить</span>'
+        } else [
+            textField.disabled = true ,
+            document.getElementById('text-change-button').innerHTML = '<span>Изменить</span>'
+        ]
+
+    }
+</script>
 </html>
