--- a/from-quests.html
+++ b/from-quests.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8"/>
     <title>Event Page</title>
     <link type="text/css"
+          href="styles/jquery-ui-1.8.23.custom.css"
+          rel="stylesheet">
+    <script src="js/jquery-1.8.0.min.js"
+            type="text/javascript"></script>
+    <script src="js/jquery-ui-1.8.23.custom.min.js"
+            type="text/javascript"></script>
+    <link type="text/css"
           rel="stylesheet"
           media="all"
           href="styles/main.css">
@@ -30,7 +37,7 @@
 <div class="quest-form-filter usual">
     <span class="quest-form-filter-top">Добавить гостей</span>
 
-    <div class="send-input"><input placeholder="введите имя или почту" class="form-input">
+    <div class="send-input"><input type="text" placeholder="введите имя или почту" class="form-input">
         <div class="usual form-input-add-button"></div>
     </div>
 
