--- a/profile.html
+++ b/profile.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8">
     <title>Event Page</title>
     <link type="text/css"
+          href="styles/jquery-ui-1.8.23.custom.css"
+          rel="stylesheet">
+    <script src="js/jquery-1.8.0.min.js"
+            type="text/javascript"></script>
+    <script src="js/jquery-ui-1.8.23.custom.min.js"
+            type="text/javascript"></script>
+    <link type="text/css"
           rel="stylesheet"
           media="all"
           href="styles/main.css">
