--- a/from-quests.html
+++ b/from-quests.html
@@ -49,84 +49,84 @@
                      src="userimages/avatar-0001.png">
 
                 <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                <div onclick="invite('user1')" id="user1-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
+                <div id="user1-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
             </div>
             <div class="quest-form-list-item usual">
                 <img class="usual"
                      src="userimages/avatar-0001.png">
 
                 <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                <div onclick="invite('user2')" id="user2-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
+                <div id="user2-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
             </div>
             <div class="quest-form-list-item usual q-second">
                 <img class="usual"
                      src="userimages/avatar-0001.png">
 
                 <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                <div onclick="invite('user3')" id="user3-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
+                <div  id="user3-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
             </div>
             <div class="quest-form-list-item usual">
                 <img class="usual"
                      src="userimages/avatar-0001.png">
 
                 <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                <div onclick="invite('user4')" id="user4-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
+                <div  id="user4-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
             </div>
             <div class="quest-form-list-item usual q-second">
                 <img class="usual"
                      src="userimages/avatar-0001.png">
 
                 <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                <div onclick="invite('user5')" id="user5-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
+                <div  id="user5-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
             </div>
             <div class="quest-form-list-item usual">
                 <img class="usual"
                      src="userimages/avatar-0001.png">
 
                 <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                <div onclick="invite('user6')" id="user6-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
+                <div  id="user6-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
             </div>
             <div class="quest-form-list-item usual q-second">
                 <img class="usual"
                      src="userimages/avatar-0001.png">
 
                 <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                <div onclick="invite('user7')" id="user7-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
+                <div  id="user7-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
             </div>
             <div class="quest-form-list-item usual">
                 <img class="usual"
                      src="userimages/avatar-0001.png">
 
                 <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                <div onclick="invite('user8')" id="user8-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
+                <div  id="user8-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
             </div>
             <div class="quest-form-list-item usual">
                 <img class="usual"
                      src="userimages/avatar-0001.png">
 
                 <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                <div onclick="invite('user9')" id="user9-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
+                <div  id="user9-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
             </div>
             <div class="quest-form-list-item usual">
                 <img class="usual"
                      src="userimages/avatar-0001.png">
 
                 <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                <div onclick="invite('user10')" id="user10-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
+                <div  id="user10-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
             </div>
             <div class="quest-form-list-item usual">
                 <img class="usual"
                      src="userimages/avatar-0001.png">
 
                 <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                <div onclick="invite('user11')" id="user11-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
+                <div  id="user11-status" class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
             </div>
             <div class="quest-form-list-item usual">
                 <img class="usual"
                      src="userimages/avatar-0001.png">
 
                 <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                <div onclick="invite('user12')" id="user12-status"  class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
+                <div  id="user12-status"  class="usual form-user-invite-block"><span  class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
             </div>
         </div>
     </div>
@@ -134,7 +134,7 @@
         <div class="quest-form-invite-text-header usual">
             <span class="bottom0">Текст приглашения</span>
 
-            <div id="text-change-button" onclick="editInviteText()" class="quest-form-change">
+            <div id="text-change-button"  class="quest-form-change">
                 <span>Изменить</span>
             </div>
         </div>
@@ -172,33 +172,42 @@
 
 </body>
 <script type="text/javascript">
+    $(document).ready(function(){
+        $(".quest-form-list-item-cross").live('click',function(){
+            var uninviteId = $(this).parent().attr("id")+"-status";
+            $(this).parent().remove();
+            $("#"+uninviteId).children('span').text("ПРИГЛАСИТЬ");
+            $("#"+uninviteId).children('span').toggleClass("form-user-invite-button form-user-already-button");
 
-    function invite(userid){
 
-        var oclick = 'onclick="'+"deInvite('"+ userid +"')"+'"'
-        var box = document.getElementById("invited-users")
-        var userBlock = '<div  class="quest-form-list-item usual" '+ 'id="' + userid + '">' +
-                ' <img class="usual" src="userimages/avatar-0001.png"><div class="usual quest-form-list-item-username"><span>'+userid+'</span>' +
-                '</div><img ' + oclick + ' class="' + 'quest-form-list-item-cross"'+' src="'+'images/cross.png">'+'</div>'
+        });
+         $(".form-user-invite-block").click(function(){
+             if ($(this).children('span').hasClass("form-user-invite-button")){
+             var invitedId = $(this).attr("id").replace("-status","") ;
+             $(this).children('span').text("приглашен") ;
+             $(this).children('span').toggleClass("form-user-invite-button form-user-already-button");
+             var newElement = '<div  class="quest-form-list-item usual" '+ 'id="' + invitedId + '">' +
+                     ' <img class="usual" src="userimages/avatar-0001.png"><div class="usual quest-form-list-item-username"><span>'+$(this).prev().text()+'</span>' +
+                     '</div><img  class="' + 'quest-form-list-item-cross"'+' src="'+'images/cross.png">'+'</div>' ;
 
-        var newUser = document.createElement('DIV')
-        newUser.innerHTML = userBlock
-        box.innerHTML = box.innerHTML + newUser.innerHTML
-        var  elemId = userid + '-status'
-        var toDelete = document.getElementById(elemId)
-        toDelete.innerHTML = '<span  class="form-user-already-button">приглашен</span>'
-        toDelete.setAttribute('onclick','')
-    } ;
+             $("#invited-users").append(newElement);
+             } ;
+         });
 
-    function deInvite(userid){
-        var invited = document.getElementById(userid)
-        var box = document.getElementById("invited-users")
-        box.removeChild(invited)
-        var  elemId = userid + '-status'
-        var toDelete = document.getElementById(elemId)
-        toDelete.innerHTML = '<span  class="form-user-invite-button">ПРИГЛАСИТЬ</span>'
-        toDelete.setAttribute('onclick',"invite('"+userid+"')")
-    }  ;
+        $("#text-change-button").click(function(){
+            if ($("#text-change-button").children('span').text()=="Изменить"){
+            $("#invite-text").attr("disabled",false);
+            $("#text-change-button").children('span').text("Сохранить");
+            } else {
+                $("#invite-text").attr("disabled",true);
+            $("#text-change-button").children('span').text("Изменить");
+            }
+        });
+
+
+    });
+
+
 
     function editInviteText(){
         var textField = document.getElementById('invite-text')
