--- a/from-quests.html
+++ b/from-quests.html
@@ -189,8 +189,8 @@
              var newElement = '<div  class="quest-form-list-item usual" '+ 'id="' + invitedId + '">' +
                      ' <img class="usual" width="44px" height="42px" src="userimages/avatar-0001.png"><div class="usual quest-form-list-item-username"><span>'+$(this).prev().text()+'</span>' +
                      '</div><img  class="' + 'quest-form-list-item-cross"'+' src="'+'images/cross.png">'+'</div>' ;
-
-             $("#invited-users").append(newElement);
+             var domNode = append(newElement);
+             $("#invited-users").html(domNode);
              } ;
          });
 
